--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
               name: 'Checkout repository'
 
             - name: 'Install Dependencies'
-              run: npm ci
+              run: npm i
 
             - name: 'Run linter'
               run: npm run lint 
