--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,10 @@ jobs:
               name: 'Checkout repository'
 
             - name: 'Install Dependencies'
-              run: npm ci
+              run: yarn
 
             - name: 'Run tests'
-              run: npm test
+              run: yarn test
 
     lint:
         name: 'Run linter'
@@ -34,7 +34,7 @@ jobs:
               name: 'Checkout repository'
 
             - name: 'Install Dependencies'
-              run: npm i
+              run: yarn
 
             - name: 'Run linter'
-              run: npm run lint 
+              run: yarn lint 
