--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "rimraf": "^5.0.5",
     "tsx": "^4.7.1",
-    "typescript": "*",
+    "typescript": "^5.4.3",
     "vitest": "^1.3.1"
   },
   "bugs": {
